[metadata]
name = mixing
version = 0.0.2
url = https://github.com/thorwhalen/mixing
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = mit
author = Thor Whalen
description = Tools for video and audio editing
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = mixing

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	moviepy

